--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
     <div id="main">
     <center>
-        <div style="font-family:Courier New; font-size:60px; color:red">0xFED Token</div>
+        <img src="0xFED_logo.png"></img>
         <div style="font-family:Courier New; font-size:36px; color:red">Coming soon!</div>
     </center>
     </div>
