--- a/index.html
+++ b/index.html
@@ -1,44 +1,226 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>0xFED - GM</title>
-    <meta name="description" content="Offical Page of the famous 0xFED token">
-    <meta name="author" content="0xFEDSquad">
+  <title>0xFED</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
 
-    <meta property="og:title" content="0xFED the Federal Crypto System ">
-    <meta property="og:type" content="website">
-    <meta property="og:description" content="Offical Page of the famous 0xFED token">
-    <meta property="og:image" content="image.png">
-    <style>
-        body {
-            background-color: black;
-        }
-        div#main {
-            height: 200px;
-            width: 400px;
-            background: black;
+  <!-- Favicons -->
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            margin-top: -100px;
-            margin-left: -200px;
-        }
-    </style>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+  <!-- Template Main CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet">
+
 </head>
 
 <body>
-    <div id="main">
-    <center>
-        <img src="0xFED_logo.png"></img>
-        <div style="font-family:Courier New; font-size:36px; color:red">Coming soon!</div>
-    </center>
+
+  <!-- ======= Mobile nav toggle button ======= -->
+  <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
+  <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
+  <!-- ======= Header ======= -->
+  <header id="header" class="d-flex flex-column justify-content-center">
+
+    <nav id="navbar" class="navbar nav-menu">
+      <ul>
+        <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-dna"></i> <span>About</span></a></li>
+        <li><a href="#tokenomics" class="nav-link scrollto"><i class="bx bx-candles"></i> <span>Tokenomics</span></a></li>
+        <li><a href="#roadmap" class="nav-link scrollto"><i class="bx bx-trip"></i> <span>Roadmap</span></a></li>
+        <!-- <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
+        <!-- <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li> -->
+      </ul>
+    </nav><!-- .nav-menu -->
+
+  </header><!-- End Header -->
+
+  <!-- ======= Hero Section ======= -->
+  <section id="hero" class="d-flex flex-column justify-content-center">
+    <div class="container" data-aos="zoom-in" data-aos-delay="100">
+      <img src="assets/img/0xFED.png" >
+      <p>a <span class="typed" data-typed-items="crypto's society, masterplan"></span>token</p>
+      <div class="social-links">
+        <a href="https://twitter.com/0xFEDtoken" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
+        <a href="https://pancakeswap.finance/" class="telegram" target="_blank"><i class="bx bxl-telegram"></i></a>
+        <a href="https://pancakeswap.finance/" class="pancakeswap" target="_blank"><i class="bx bxs-wallet"></i></a>
+      </div>
     </div>
+  </section><!-- End Hero -->
+
+  <main id="main">
+
+    <!-- ======= About Section ======= -->
+    <section id="about" class="about">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>About</h2>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-4">
+            <img src="assets/img/0xFED_powell1_TG_sticker.png" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-8 pt-4 pt-lg-0 content">
+            <p class="fst">
+              The so called FED, with its leader Jerome Powell, is blatantly anti-crypto.
+              With the 0xFED community we have set ourselves the goal of showing the opponents that crypto is a wonderful thing and
+              that they should finally see that there is no point in fighting against it.
+            </p>
+            <p class="fst">
+              Large investors and well-known names such as:
+            </p>
+            <div class="row">
+              <div class="col-lg-6">
+                <ul>
+                  <li><i class="bi bi-chevron-right"></i> Barry Silbert</li>
+                  <li><i class="bi bi-chevron-right"></i> Micheal Saylor</li>
+                  <li><i class="bi bi-chevron-right"></i> Tyler and Cameron Winklevoss</li>
+                  <li><i class="bi bi-chevron-right"></i> Elon Musk</li>
+                  <li><i class="bi bi-chevron-right"></i> Michael Novogratz</li>
+                </ul>
+              </div>
+            </div>
+            <p class="fst">
+              have already recognized the potential.
+            </p>
+            <p class="fst" style="margin-top: 35px;">
+              <strong class="redtext">0xFED</strong><strong> unite! Convince the world!</strong>
+            </p>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <section id="tokenomics" class="skills section-bg">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Tokenomics</h2>
+          <p>Total supply 9'699'969'420</p>
+        </div>
+        <div class="row skills-content">
+          <div class="progress">
+            <span class="skill">Liquidity <i class="val">5%</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" style="background-color: #011426" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+          <div class="progress">
+            <span class="skill">Marketing <i class="val">3%</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" style="background-color: #011426" role="progressbar" aria-valuenow="3" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+          <div class="progress">
+            <span class="skill">Development <i class="val">2%</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" style="background-color: #011426" role="progressbar" aria-valuenow="2" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+      </div>
+    </section>
+
+    <section id="roadmap" class="roadmap">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Roadmap</h2>
+        </div>
+
+        <div class="row">
+          <div class="roadmap col-lg-6">
+            <div class="roadmap-item pb-0">
+              <h4>Phase I</h4>
+              <h5>Q1 2022</h5>
+              <ul>
+                <li>Fair (stealth) launch</li>
+                <li>Coin Gecko (CG) & Coinmarketcap (CMC) listing</li>
+              </ul>
+            </div>
+            <div class="roadmap-item pb-0">
+              <h4>Phase II</h4>
+              <h5>Q2 2022</h5>
+              <ul>
+                <li>Various marketing campaigns (Brave, Influencer and more)</li>
+                <li>Merchandise</li>
+                <li>Sponsered awareness event</li>
+              </ul>
+            </div>
+            <div class="roadmap-item">
+              <h4>Phase III</h4>
+              <h5>Q3 2022</h5>
+              <ul>
+                <li>NFT collection</li>
+                <li>Partnerships</li>
+                <li>Multiple CEX listings</li>
+              </ul>
+            </div>
+            <div class="roadmap-item pb-0">
+              <h4>Phase IV</h4>
+              <h5>Q4 2022</h5>
+              <ul>
+                <li>High yield stake platform launch</li>
+                <li>Reward incentives</li>
+              </ul>
+            </div>
+          </div>
+          <div class="roadmap col-lg-6">
+            <img src="assets/img/0xFED_powell_trust_TG_sticker.png" class="img-fluid" alt="">
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+  </main>
+  <footer id="footer">
+    <div class="container">
+      <div class="social-links">
+        <a href="https://twitter.com/0xFEDtoken" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="#" class="telegram"><i class="bx bxl-telegram"></i></a>
+        <a href="#" class="wallet"><i class="bx bxs-wallet"></i></a>
+      </div>
+      <div class="copyright">
+        &copy; Copyright <strong><span>0xFED</span></strong>. All Rights Reserved
+      </div>
+    </div>
+  </footer>
+
+  <div id="preloader"></div>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/purecounter/purecounter.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/typed.js/typed.min.js"></script>
+  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
+
 </body>
 
 </html>
