--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <div class="progress">
             <span class="skill">Liquidity <i class="val">5%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" style="background-color: #011426" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" style="background-color: #011426" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
           <div class="progress">
@@ -149,15 +149,15 @@
           <div class="roadmap col-lg-6">
             <div class="roadmap-item pb-0">
               <h4>Phase I</h4>
-              <h5>Q1 2022</h5>
+              <h5>Q3 2024</h5>
               <ul>
-                <li>Fair (stealth) launch</li>
+                <li>Fair (stealth) launch on pump.fun</li>
                 <li>Coin Gecko (CG) & Coinmarketcap (CMC) listing</li>
               </ul>
             </div>
             <div class="roadmap-item pb-0">
               <h4>Phase II</h4>
-              <h5>Q2 2022</h5>
+              <h5>Q3 2024</h5>
               <ul>
                 <li>Various marketing campaigns (Brave, Influencer and more)</li>
                 <li>Merchandise</li>
@@ -166,7 +166,7 @@
             </div>
             <div class="roadmap-item">
               <h4>Phase III</h4>
-              <h5>Q3 2022</h5>
+              <h5>Q4 2024</h5>
               <ul>
                 <li>NFT collection</li>
                 <li>Partnerships</li>
@@ -175,7 +175,7 @@
             </div>
             <div class="roadmap-item pb-0">
               <h4>Phase IV</h4>
-              <h5>Q4 2022</h5>
+              <h5>Q4 2024</h5>
               <ul>
                 <li>High yield stake platform launch</li>
                 <li>Reward incentives</li>
