update telegram url

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <p>a <span class="typed" data-typed-items="crypto's society, masterplan"></span>token</p>
       <div class="social-links">
         <a href="https://twitter.com/0xFEDtoken" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
-        <a href="https://pancakeswap.finance/" class="telegram" target="_blank"><i class="bx bxl-telegram"></i></a>
+        <a href="https://t.me/+q0sf_uhNsVg3ZTA6" class="telegram" target="_blank"><i class="bx bxl-telegram"></i></a>
         <a href="https://pancakeswap.finance/" class="pancakeswap" target="_blank"><i class="bx bxs-wallet"></i></a>
       </div>
     </div>
