--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="social-links">
         <a href="https://twitter.com/0xFEDtoken" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
         <a href="https://t.me/+q0sf_uhNsVg3ZTA6" class="telegram" target="_blank"><i class="bx bxl-telegram"></i></a>
-        <a href="https://pancakeswap.finance/" class="pancakeswap" target="_blank"><i class="bx bxs-wallet"></i></a>
+        <a href="https://pump.fun/5W8tGuv3KEMEfpTSNSfpbZ2nz95M7coCbghTHALwHCoz" class="pancakeswap" target="_blank"><i class="bx bxs-wallet"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
